fixed drag flickering issue. added styling

--- a/www/js/modules/entry/styles/dropzone.css
+++ b/www/js/modules/entry/styles/dropzone.css
@@ -32,17 +32,17 @@
 .dropzone.dz-drag-hover { border-style: solid; }
 .dropzone.dz-drag-hover .dz-message { opacity: 0.5; }
 .dropzone .dz-message { text-align: center; margin: 2em 0; }
-.dropzone .dz-preview { position: relative; display: inline-block; vertical-align: top; margin: 16px; min-height: 100px; }
+.dropzone .dz-preview { position: relative; display: inline-block; vertical-align: top; margin: 10px; min-height: 100px; }
 .dropzone .dz-preview:hover { z-index: 1000; }
 .dropzone .dz-preview:hover .dz-details { opacity: 1; }
 .dropzone .dz-preview.dz-file-preview .dz-image { border-radius: 20px; background: #999; background: linear-gradient(to bottom, #eee, #ddd); }
 .dropzone .dz-preview.dz-file-preview .dz-details { opacity: 1; }
-.dropzone .dz-preview.dz-image-preview { background: white; }
+.dropzone .dz-preview.dz-image-preview { background: none; width: 90px;}
 .dropzone .dz-preview.dz-image-preview .dz-details { -webkit-transition: opacity 0.2s linear; -moz-transition: opacity 0.2s linear; -ms-transition: opacity 0.2s linear; -o-transition: opacity 0.2s linear; transition: opacity 0.2s linear; }
 .dropzone .dz-preview .dz-remove { font-size: 14px; text-align: center; display: block; cursor: pointer; border: none; }
 .dropzone .dz-preview .dz-remove:hover { text-decoration: underline; }
 .dropzone .dz-preview:hover .dz-details { opacity: 1; }
-.dropzone .dz-preview .dz-details { z-index: 20; position: absolute; top: 0; left: 0; opacity: 0; font-size: 13px; min-width: 100%; max-width: 100%; padding: 2em 1em; text-align: center; color: rgba(0, 0, 0, 0.9); line-height: 150%; }
+.dropzone .dz-preview .dz-details { z-index: 20; position: absolute; top: 0; left: 0; opacity: 0; font-size: 13px; min-width: 100%; max-width: 100%; padding: 1.5em 1em; text-align: center; color: rgba(0, 0, 0, 0.9); line-height: 150%; }
 .dropzone .dz-preview .dz-details .dz-size { margin-bottom: 1em; font-size: 16px; }
 .dropzone .dz-preview .dz-details .dz-filename { white-space: nowrap; }
 .dropzone .dz-preview .dz-details .dz-filename:hover span { border: 1px solid rgba(200, 200, 200, 0.8); background-color: rgba(255, 255, 255, 0.8); }
@@ -50,8 +50,8 @@
 .dropzone .dz-preview .dz-details .dz-filename:not(:hover) span { border: 1px solid transparent; }
 .dropzone .dz-preview .dz-details .dz-filename span, .dropzone .dz-preview .dz-details .dz-size span { background-color: rgba(255, 255, 255, 0.4); padding: 0 0.4em; border-radius: 3px; }
 .dropzone .dz-preview:hover .dz-image img { -webkit-transform: scale(1.05, 1.05); -moz-transform: scale(1.05, 1.05); -ms-transform: scale(1.05, 1.05); -o-transform: scale(1.05, 1.05); transform: scale(1.05, 1.05); -webkit-filter: blur(8px); filter: blur(8px); }
-.dropzone .dz-preview .dz-image { border-radius: 20px; overflow: hidden; width: 120px; height: 120px; position: relative; display: block; z-index: 10; }
-.dropzone .dz-preview .dz-image img { display: block; }
+.dropzone .dz-preview .dz-image { border-radius: 20px; overflow: hidden; position: relative; display: block; z-index: 10; }
+.dropzone .dz-preview .dz-image img { display: block; width: 100%;}
 .dropzone .dz-preview.dz-success .dz-success-mark { -webkit-animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1); -moz-animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1); -ms-animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1); -o-animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1); animation: passing-through 3s cubic-bezier(0.77, 0, 0.175, 1); }
 .dropzone .dz-preview.dz-error .dz-error-mark { opacity: 1; -webkit-animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1); -moz-animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1); -ms-animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1); -o-animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1); animation: slide-in 3s cubic-bezier(0.77, 0, 0.175, 1); }
 .dropzone .dz-preview .dz-success-mark, .dropzone .dz-preview .dz-error-mark { pointer-events: none; opacity: 0; z-index: 500; position: absolute; display: block; top: 50%; left: 50%; margin-left: -27px; margin-top: -27px; }
@@ -77,4 +77,24 @@
   font-size: 24px;
   text-align: center;
   color: #000;
+}
+
+.dz-drag {
+  margin: 2em 0;
+  text-align: center;
+}
+
+.dropzone * {
+  pointer-events: none;
+}
+
+.dropzone .dz-preview * {
+  pointer-events: initial;
+}
+
+.dropzone {
+  min-height: 150px;
+  border: 2px dashed #eee;
+  padding: 1rem;
+  border-bottom: 2px dashed #444;
 }
